correction du contrast dans le footer

--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.sr-only
+    {
+        color: white;
+    }
+
 a,
 button {
     transition: all .3s ease-in-out;
